# Loader-Yogs

./: .gitignore  README.md  build.gradle  settings.gradle  signing.gradle  signing.properties
app/: build.gradle  proguard-rules.pro
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: fuck
app/src/main/jni/: Android.mk  Android.mk.bak  Application.mk  CMakeLists.txt  ESP.h  Hacks.h  Vector3.hpp  desi.cpp  main.cpp  socket.h  struct.h
app/src/main/jni/client/: ESP.h  Hacks.h  Vector2.hpp  desi.cpp  obfuscate.h  socket.h  struct.h
app/src/main/jni/rLogin/: LicenseTools.h  Login.h
app/src/main/jni/rLogin/curl/openssl-android-arm64-v8a/include/openssl/: obj_mac.h  ssl.h
app/src/main/jni/server/: Shoolin.cpp  includes.h  support.h
app/src/main/jni/sharedjni/: Login.h  Tools.cpp  jnifunc.cpp
app/src/main/res/anim/: slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/drawable/: bg_button.xml  bg_loading.xml  bg_rounded.xml  bg_switch.xml  bitfalse.xml  ghost.xml  ghost_outline.xml  ic_check.xml  install.xml  settings.xml  switch_thumb_icon.xml  switch_track_custom.xml  trash.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_splash.xml  floating.xml  loading_animation.xml
app/src/main/res/raw/: loading.json  loginanimation.json  welcome.json
keys/: JungliCheatz.keystore
server/: compiler.sh  compiler.sh.bak
server/jni/: Android.mk  Application.mk  Matrix4x4.hpp  Shoolin.cpp  Shoolin.cpp.bak  TouchInput.hpp  struct.h  struct.h.bak  support.h
server/libs/arm64-v8a/: fuck  sock64
(+14 files in other folders)
